package seedu.duke.exception;

public class DuplicateEntryException extends HalpmiException {

    public DuplicateEntryException(String message) {
        super(message);
    }

}
