package seedu.duke.exception;

public class NotFoundException extends HalpmiException {

    public NotFoundException(String message) {
        super(message);
    }


}
