package seedu.duke.exception;

public class UserInputErrorException extends HalpmiException {
    public UserInputErrorException(String message) {
        super(message);
    }

}
