@startuml
'https://plantuml.com/class-diagram
hide circle

skinparam classAttributeIconSize 0
class UserInputErrorException {
    +UserInputErrorException(String)
    +toString() : String
}
class DuplicateEntryException {
    +DuplicateEntryException(String)
    +toString() : String
 }

class NotFoundException {
    +DuplicateEntryException(String)
    +toString() : String
}

class HalpmiException{
    +HalpmiException(String)
    +toString() : String
}
DuplicateEntryException --|> HalpmiException
UserInputErrorException --|> HalpmiException
NotFoundException --|> HalpmiException

HalpmiException --|> Exception
@enduml